--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       gap: 20px;
     }
     .nav-list li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
+        color: white;
+        text-decoration: none;
+        font-weight: bold; /* bold links */
     }
     .nav-list li a:hover {
       text-decoration: underline;
@@ -44,6 +44,8 @@
     .hero h1 {
       font-size: 2em;
       margin-bottom: 10px;
+      color: white;      /* already white, keep it */
+      font-weight: bold; /* make bold */
     }
     .btn-primary {
       background: white;
