--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       color: white;      /* already white, keep it */
       font-weight: bold; /* make bold */
     }
+    /* Add this for the hero paragraph */
+    .hero p {
+    color: white;      /* ensure text is white */
+    font-weight: bold; /* make bold */
+    }
     .btn-primary {
       background: white;
       color: #006400;
