--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     /* Header color */
     .site-header {
-      background-color: #000; /* black */
+      background-color: #eaf5ea; /* #000 black */
       color: white;
       padding: 10px 0;
     }
