--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     /* Header color */
     .site-header {
-      background-color: #4d4d4d; /* #000 black */
+      background-color: #FFFAFA; /* #000 black #4d4d4d grey*/
       color: white;
       padding: 10px 0;
     }
@@ -26,7 +26,7 @@
       gap: 20px;
     }
     .nav-list li a {
-        color: white;
+        color: black;
         text-decoration: none;
         font-weight: bold; /* bold links */
     }
