--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     /* Header color */
     .site-header {
-      background-color: #FFFAFA; /* #000 black #4d4d4d grey*/
+      background-color: #006600; /* #000 black #4d4d4d grey*/
       color: white;
       padding: 10px 0;
     }
