--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     /* Hero Section */
     .hero {
-      background: linear-gradient(135deg, #006400, #004d00);
+      background: #FFFAFA /* or any off-white you prefer linear-gradient(135deg, #006400, #004d00);*/
       color: white;
       text-align: center;
       padding: 80px 20px;
