--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     .site-footer {
       text-align: center;
       background: #000;
-      color: white;
+      color: #FFFFFF;
       padding: 15px 10px;
       font-size: 0.9rem;
     }
