--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     .hero h1 {
       font-size: 2em;
       margin-bottom: 10px;
-      color: white;      /* already white, keep it */
+      color: #000;      /* already white, keep it */
       font-weight: bold; /* make bold */
     }
     /* Add this for the hero paragraph */
     .hero p {
-    color: white;      /* ensure text is white */
+    color: #000;      /* ensure text is white */
     font-weight: bold; /* make bold */
     }
     .btn-primary {
