--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
 
     /* Footer */
     .site-footer {
-      text-align: center;
-      background: #000;
-      color: #fff;
-      padding: 15px 10px;
-      font-size: 0.9rem;
-    }
+        text-align: center;
+        background: #000;
+        color: #ffffff !important; /* ensures it's pure white and overrides all other CSS */
+        padding: 15px 10px;
+        font-size: 0.9rem;
+      }
   </style>
 </head>
 
