--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       gap: 20px;
     }
     .nav-list li a {
-      color: black;
+      color: white;
       text-decoration: none;
       font-weight: bold;
     }
