--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     /* Footer */
     .site-footer {
         text-align: center;
-        background: #000;
-        color: #ffffff !important; /* ensures it's pure white and overrides all other CSS */
+        background: #ffffff;
+        color: #000 !important; /* ensures it's pure white and overrides all other CSS */
         padding: 15px 10px;
         font-size: 0.9rem;
       }
