--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
     .flag-section {
       text-align: center;
       background: #fff;
-      padding: 20px 0;
+      padding: 40px 0 20px 0;    /* more top padding, normal bottom padding */
     }
     .flag-section img {
       height: 160px;
+      border: 3px solid #000;    /* black outline */
+      border-radius: 4px;        /* optional, slightly rounded corners */
+      display: inline-block;     /* ensures border wraps tightly */
     }
 
     /* Hero Section */
