--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     /* Header color */
     .site-header {
-      background-color: #006600;
+      background-color: #004d00; /* darker green lighter green #006600;*/
       color: white;
       padding: 10px 0;
     }
