--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     /* Footer */
     .site-footer {
       text-align: center;
-      background: #000;
+      background: #e0e0e0;
       color: #fff;
       padding: 15px 10px;
       font-size: 0.9rem;
