--- a/findings/2025.html
+++ b/findings/2025.html
@@ -24,7 +24,7 @@
     </nav>
   </header>
 
-  <!-- Hero section -->
+  <!-- Hero Section -->
   <section class="hero hero-dark">
     <div class="hero-inner">
       <h1>Pakistan Report Card 2025</h1>
@@ -32,11 +32,11 @@
     </div>
   </section>
 
-  <!-- Findings container -->
+  <!-- Findings Container -->
   <section class="findings-container">
     <div class="indicator-list">
 
-      <!-- Example Indicator -->
+      <!-- Indicator 1 -->
       <div class="indicator">
         <div class="indicator-header" onclick="toggleIndicator(this)">
           <span>Overall Physical Activity</span>
@@ -53,7 +53,150 @@
         </div>
       </div>
 
-      <!-- Repeat indicators 2–10 here (same structure) -->
+      <!-- Indicator 2 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Organized Sport Participation</span>
+          <span class="grade">C-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children and adolescents participating in organized sports at least once a week.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Participation is higher among urban boys compared to rural girls.</li>
+            <li>Limited infrastructure and access remain barriers.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 3 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Active Play</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children engaging in unstructured active play several times per week.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Traditional games are common but declining in urban settings.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 4 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Active Transportation</span>
+          <span class="grade">B</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children using active means (walking, cycling) to travel to and from school.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Many children walk to school, especially in rural areas.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 5 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Sedentary Behaviours</span>
+          <span class="grade">C+</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children spending less than 2 hours daily on recreational screen time.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Screen time is increasing rapidly in urban populations.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 6 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Physical Fitness</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Average physical fitness levels (cardiorespiratory, muscular strength) relative to international norms.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Limited national data; school-level studies suggest moderate fitness levels.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 7 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Family and Peers</span>
+          <span class="grade">C-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of parents and peers providing support for physical activity (encouragement, participation, transportation).</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Parental support varies by socioeconomic status.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 8 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>School</span>
+          <span class="grade">B-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of schools offering regular physical education classes and activity opportunities.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>PE classes exist in policy but are not consistently implemented.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 9 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Community and Environment</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Availability and accessibility of community-level facilities supporting physical activity.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Limited safe and inclusive public spaces for play.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 10 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Government</span>
+          <span class="grade">C+</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Evidence of leadership, policies, and investments supporting physical activity for children and youth.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Recent national policies acknowledge physical activity, but implementation remains limited.</li>
+          </ul>
+        </div>
+      </div>
 
     </div>
   </section>
