--- a/findings/2025.html
+++ b/findings/2025.html
@@ -206,6 +206,7 @@
     <p>© 2025 Active Healthy Kids Pakistan | Hosted on GitHub Pages</p>
   </footer>
 
+  <!-- Toggle Script -->
   <script>
     function toggleIndicator(element) {
       const content = element.nextElementSibling;
