--- a/findings/2025.html
+++ b/findings/2025.html
@@ -9,7 +9,11 @@
     body { font-family: Arial, sans-serif; }
 
     /* Header nav links bold and white */
-    .site-header { background-color: #000; color: white; padding: 10px 0; }
+    .site-header {
+    background-color: #006600; /* green matching homepage */
+    color: white;
+     padding: 10px 0;
+    }
     .main-nav { max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 0 20px; }
     .nav-list { list-style: none; display: flex; gap: 20px; }
     .nav-list li a { color: white; text-decoration: none; font-weight: bold; }
@@ -43,11 +47,11 @@
         <a href="index.html"><img src="assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60" /></a>
       </div>
       <ul class="nav-list">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="findings.html">Findings</a></li>
-        <li><a href="team.html">Team</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../findings.html">Findings</a></li>
+        <li><a href="../team.html">Team</a></li>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="../contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
