--- a/findings/2025.html
+++ b/findings/2025.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <nav class="main-nav">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60" /></a>
+        <a href="index.html"><img src="../assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60" />
       </div>
       <ul class="nav-list">
         <li><a href="../index.html">Home</a></li>
