--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <h2>About the Report Card</h2>
 
     <p>
-      The <strong>Active Healthy Kids Pakistan Report Card</strong> is a comprehensive evidence‑based evaluation of the physical activity, sedentary behaviour, sleep and related health indicators among children and youth in Pakistan. Building on international best practices, the Report Card aims to consolidate the best available data, propose grades for each indicator, promote international comparability, and catalyse action for improved physical activity opportunities in Pakistan.
+      The <strong>Active Healthy Kids Pakistan Report Card</strong> is a comprehensive evidence‑based evaluation of the movement behaviours and related health indicators among children and youth in Pakistan. Building on international best practices, the Report Card aims to consolidate the best available data, propose grades for each indicator, promote international comparability, and catalyse action for improved physical activity opportunities in Pakistan.
     </p>
 
     <h3>Purpose</h3>
@@ -63,12 +63,12 @@
 
     <h3>Methodology</h3>
     <p>
-      An expert working group comprised of researchers, government and non‑government stakeholders reviewed all available data for children and youth in Pakistan (typically aged 5‑17 years) over the past 10 years. Data sources meeting the following criteria were included: (1) the study or report targeted children and/or adolescents in Pakistan; (2) it assessed one or more of the Report Card indicators; and (3) data collection was conducted within the past ten years. Qualitative stakeholder input was sought to ensure context‑relevant interpretation. :contentReference[oaicite:3]{index=3}
+      An expert working group comprised of researchers and academics reviewed all available data for children and youth in Pakistan (typically aged 5‑17 years) over the past 10 years. Data sources meeting the following criteria were included: (1) the study or report targeted children and/or adolescents in Pakistan; (2) it assessed one or more of the Report Card indicators; and (3) data collection was conducted within the past ten years. Qualitative stakeholder input was sought to ensure context‑relevant interpretation.
     </p>
 
     <h3>Assigning Grades</h3>
     <p>
-      For each indicator, the working group discussed the evidence, applied the benchmarks, and arrived at a proposed grade that was further reviewed in stakeholder consultation. Where applicable, an “*” was appended to the grade if the evidence included both device‑measured and self‑report data; and “**” if based exclusively on device‑measured data. :contentReference[oaicite:4]{index=4}
+      For each indicator, the working group discussed the evidence, applied the benchmarks, and arrived at a proposed grade that was further reviewed in stakeholder consultation. :contentReference[oaicite:4]{index=4}
     </p>
 
     <h3>Dissemination and Use</h3>
