--- a/findings/2025.html
+++ b/findings/2025.html
@@ -48,7 +48,7 @@
 
     /* Hero Section */
     .hero {
-      background-color: #e6ffe6; /* Light green */
+      background-color: #ffffff; /* white or use this #e6ffe6 for Light green */
       color: #004d00;
       text-align: center;
       padding: 80px 20px;
