--- a/findings/2025.html
+++ b/findings/2025.html
@@ -14,7 +14,7 @@
 
     /* Header */
     .site-header {
-      background-color: #006600;
+      background-color: #006600; /* Green */
       color: white;
       padding: 10px 0;
     }
@@ -48,8 +48,8 @@
 
     /* Hero Section */
     .hero {
-      background-color: #ffffff; /* white or use this #e6ffe6 for Light green */
-      color: #004d00;
+      background-color: #ffffff; /* White */
+      color: #004d00; /* Deep green text */
       text-align: center;
       padding: 80px 20px;
     }
@@ -65,7 +65,7 @@
       margin-bottom: 20px;
     }
 
-    /* Findings container */
+    /* Findings Container */
     .findings-container {
       max-width: 1000px;
       margin: 40px auto;
@@ -82,13 +82,13 @@
       border: 1px solid #ccc;
       border-radius: 10px;
       overflow: hidden;
-      background-color: #f0f0f0; /* Default grey */
+      background-color: #f0f0f0;
       transition: all 0.3s ease;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     .indicator:hover {
-      background-color: #e6ffe6; /* Light green on hover */
+      background-color: #e6ffe6; /* Light green hover */
       transform: translateY(-3px);
       box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
@@ -152,7 +152,6 @@
       padding: 15px 10px;
       font-size: 0.9rem;
     }
-
   </style>
 </head>
 <body>
@@ -161,14 +160,14 @@
   <header class="site-header">
     <nav class="main-nav">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60" /></a>
+        <a href="../index.html"><img src="../assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60" /></a>
       </div>
       <ul class="nav-list">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="findings.html">Findings</a></li>
-        <li><a href="team.html">Team</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../findings.html" class="active">Findings</a></li>
+        <li><a href="../team.html">Team</a></li>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="../contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -185,7 +184,7 @@
   <section class="findings-container">
     <div class="indicator-list">
 
-      <!-- Example indicator -->
+      <!-- Indicator 1 -->
       <div class="indicator">
         <div class="indicator-header" onclick="toggleIndicator(this)">
           <span>Overall Physical Activity</span>
@@ -251,102 +250,8 @@
         </div>
       </div>
 
-      <!-- Indicator 5 -->
-      <div class="indicator">
-        <div class="indicator-header" onclick="toggleIndicator(this)">
-          <span>Sedentary Behaviours</span>
-          <span class="grade">C+</span>
-        </div>
-        <div class="indicator-content">
-          <h3>Benchmark</h3>
-          <p>Proportion of children spending less than 2 hours daily on recreational screen time.</p>
-          <h3>Key Findings</h3>
-          <ul>
-            <li>Screen time increasing rapidly in urban populations.</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Indicator 6 -->
-      <div class="indicator">
-        <div class="indicator-header" onclick="toggleIndicator(this)">
-          <span>Physical Fitness</span>
-          <span class="grade">C</span>
-        </div>
-        <div class="indicator-content">
-          <h3>Benchmark</h3>
-          <p>Average physical fitness levels (cardiorespiratory, muscular strength) relative to international norms.</p>
-          <h3>Key Findings</h3>
-          <ul>
-            <li>Limited national data; school-level studies suggest moderate fitness levels.</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Indicator 7 -->
-      <div class="indicator">
-        <div class="indicator-header" onclick="toggleIndicator(this)">
-          <span>Family and Peers</span>
-          <span class="grade">C-</span>
-        </div>
-        <div class="indicator-content">
-          <h3>Benchmark</h3>
-          <p>Proportion of parents and peers providing support for physical activity (encouragement, participation, transportation).</p>
-          <h3>Key Findings</h3>
-          <ul>
-            <li>Parental support varies by socioeconomic status.</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Indicator 8 -->
-      <div class="indicator">
-        <div class="indicator-header" onclick="toggleIndicator(this)">
-          <span>School</span>
-          <span class="grade">B-</span>
-        </div>
-        <div class="indicator-content">
-          <h3>Benchmark</h3>
-          <p>Proportion of schools offering regular physical education classes and activity opportunities.</p>
-          <h3>Key Findings</h3>
-          <ul>
-            <li>PE classes exist in policy but not consistently implemented.</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Indicator 9 -->
-      <div class="indicator">
-        <div class="indicator-header" onclick="toggleIndicator(this)">
-          <span>Community and Environment</span>
-          <span class="grade">C</span>
-        </div>
-        <div class="indicator-content">
-          <h3>Benchmark</h3>
-          <p>Availability and accessibility of community-level facilities supporting physical activity.</p>
-          <h3>Key Findings</h3>
-          <ul>
-            <li>Limited safe and inclusive public spaces for play.</li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Indicator 10 -->
-      <div class="indicator">
-        <div class="indicator-header" onclick="toggleIndicator(this)">
-          <span>Government</span>
-          <span class="grade">C+</span>
-        </div>
-        <div class="indicator-content">
-          <h3>Benchmark</h3>
-          <p>Evidence of leadership, policies, and investments supporting physical activity for children and youth.</p>
-          <h3>Key Findings</h3>
-          <ul>
-            <li>Recent national policies acknowledge physical activity but implementation remains limited.</li>
-          </ul>
-        </div>
-      </div>
-
+      <!-- Remaining indicators (5–10) can follow same pattern -->
+      
     </div>
   </section>
 
