--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
     <h3>Dissemination and Use</h3>
     <p>
-      The findings from this Report Card are intended for a wide audience — policy‑makers, educators, practitioners, researchers and the general public. They are published online, shared via media and presented to key stakeholders. The goal is to stimulate dialogue, influence monitoring systems, strengthen surveillance, inform practice and policy, and provide a benchmark for future editions.
+      The findings from this Report Card are intended for a wide audience, including policy‑makers, educators, practitioners, researchers and the general public. They are published online, shared via media and presented to key stakeholders. The goal is to stimulate dialogue, influence monitoring systems, strengthen surveillance, inform practice and policy, and provide a benchmark for future editions.
     </p>
 
     <h3>Next Steps</h3>
