--- a/findings/2025.html
+++ b/findings/2025.html
@@ -88,7 +88,7 @@
     }
 
     .indicator:hover {
-      background-color: #e6ffe6; /* Light green hover */
+      background-color: #66ff66; /* #e6ffe6 Light green hover */
       transform: translateY(-3px);
       box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
