--- a/team.html
+++ b/team.html
@@ -121,7 +121,7 @@
 
       <div class="member-card">
         <img src="assets/images/ishtiaq.jpg" alt="Ishtiaq Ahmed">
-        <h3>Ishtiaq Ahmed</h3>
+        <h3>Dr. Ishtiaq Ahmed</h3>
         <p>PhD Candidate, Vrije Universiteit Brussel (VUB), Belgium.<br>
         <b>Email:</b> <a href="mailto:ixhtiaq8@gmail.com">ixhtiaq8@gmail.com</a></p>
       </div>
@@ -149,7 +149,7 @@
 
       <div class="member-card">
         <img src="assets/images/rida.jpg" alt="Rida Fatima">
-        <h3>Rida Fatima</h3>
+        <h3>Dr. Rida Fatima</h3>
         <p>Chongqing Medical University, China.<br>
         <b>Email:</b> <a href="mailto:ridadoctor345@gmail.com">ridadoctor345@gmail.com</a></p>
       </div>
