--- a/findings/2025.html
+++ b/findings/2025.html
@@ -250,8 +250,102 @@
         </div>
       </div>
 
-      <!-- Remaining indicators (5–10) can follow same pattern -->
-      
+       <!-- Indicator 5 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Sedentary Behaviours</span>
+          <span class="grade">C+</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of children spending less than 2 hours daily on recreational screen time.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Screen time increasing rapidly in urban populations.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 6 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Physical Fitness</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Average physical fitness levels (cardiorespiratory, muscular strength) relative to international norms.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Limited national data; school-level studies suggest moderate fitness levels.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 7 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Family and Peers</span>
+          <span class="grade">C-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of parents and peers providing support for physical activity (encouragement, participation, transportation).</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Parental support varies by socioeconomic status.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 8 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>School</span>
+          <span class="grade">B-</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Proportion of schools offering regular physical education classes and activity opportunities.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>PE classes exist in policy but not consistently implemented.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 9 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Community and Environment</span>
+          <span class="grade">C</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Availability and accessibility of community-level facilities supporting physical activity.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Limited safe and inclusive public spaces for play.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Indicator 10 -->
+      <div class="indicator">
+        <div class="indicator-header" onclick="toggleIndicator(this)">
+          <span>Government</span>
+          <span class="grade">C+</span>
+        </div>
+        <div class="indicator-content">
+          <h3>Benchmark</h3>
+          <p>Evidence of leadership, policies, and investments supporting physical activity for children and youth.</p>
+          <h3>Key Findings</h3>
+          <ul>
+            <li>Recent national policies acknowledge physical activity but implementation remains limited.</li>
+          </ul>
+        </div>
+      </div>
+
     </div>
   </section>
 
