--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="site-header">
     <nav class="main-nav" role="navigation">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo.jpg" alt="AHK Pakistan Logo" height="60" /></a>
+        <a href="index.html"><img src="images/logo.png" alt="Logo" class="logo" style="background-color: transparent;">
       </div>
       <ul class="nav-list" role="menubar" aria-label="Main Navigation">
         <li><a href="index.html" class="active">Home</a></li>
