--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="site-header">
     <nav class="main-nav" role="navigation">
       <div class="logo">
-       <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Logo" class="logo" style="background-color: lightgray; border: 1px solid red;">
+       <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Logo" class="logo" style="background-color: transparent;">
       </a>
       </div>
       <ul class="nav-list" role="menubar" aria-label="Main Navigation">
