--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
   <header class="site-header">
     <nav class="main-nav">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/logo_transparent.jpg" alt="Logo" height="60"></a>
+        <a href="index.html"><img src="assets/images/logo_transparent.png" alt="Logo" height="60"></a>
       </div>
       <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
