--- a/findings/2025.html
+++ b/findings/2025.html
@@ -147,8 +147,8 @@
     /* Footer */
     .site-footer {
       text-align: center;
-      background: #000;
-      color: white;
+      background: #e0e0e0;
+      color: #222;
       padding: 15px 10px;
       font-size: 0.9rem;
     }
