--- a/findings/2025.html
+++ b/findings/2025.html
@@ -16,7 +16,7 @@
     .site-header {
       background-color: #006600; /* Green */
       color: white;
-      padding: 10px 0;
+      padding: 6px 0; /* makes the header bar slimmer */
     }
 
     .main-nav {
