--- a/findings/2025.html
+++ b/findings/2025.html
@@ -14,7 +14,7 @@
 
     /* Header */
     .site-header {
-      background-color: #006600; /* Green */
+      background-color: #004d00; /* Dark green header for all pages */
       color: white;
       padding: 6px 0; /* makes the header bar slimmer */
     }
