--- a/findings/2025.html
+++ b/findings/2025.html
@@ -177,13 +177,22 @@
     <div class="hero-inner">
       <h1>Pakistan Report Card 2025</h1>
       <p>Summary of grades and key findings across all 10 Global Matrix indicators.</p>
+      <p class="report-links">
+  View full reports:
+  <a href="assets/reports/Report2025.pdf" target="_blank">Pakistan Report Card 2025</a> |
+  <a href="assets/reports/GlobalMatrix5.pdf" target="_blank">Global Matrix 5.0</a>
+</p>
     </div>
   </section>
 
   <!-- Findings container -->
   <section class="findings-container">
-    <div class="indicator-list">
+   <div class="indicator-header overall-grade" onclick="toggleIndicator(this)">
+  <span>Overall Grade</span>
+  <span class="grade">D</span>
+  </div>
 
+    <div class="indicator-list">
       <!-- Indicator 1 -->
       <div class="indicator">
         <div class="indicator-header" onclick="toggleIndicator(this)">
