--- a/findings/2025.html
+++ b/findings/2025.html
@@ -65,6 +65,28 @@
       margin-bottom: 20px;
     }
 
+    /* Overall Grade special style */
+.overall-grade {
+  background-color: #004d00; /* Dark green background */
+  color: #ffffff; /* White text */
+  font-weight: bold;
+  font-size: 1.3rem;
+  padding: 14px 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.15);
+}
+
+/* Ensure the grade badge matches the dark background */
+.overall-grade .grade {
+  background-color: #ffffff; /* White badge */
+  color: #004d00; /* Dark green text */
+  border: 1px solid #ffffff;
+}
+
     /* Findings Container */
     .findings-container {
       max-width: 1000px;
