--- a/findings/2025.html
+++ b/findings/2025.html
@@ -87,6 +87,28 @@
   border: 1px solid #ffffff;
 }
 
+/* Make Overall Grade text white */
+.overall-grade {
+  background-color: #004d00; /* Dark green background */
+  color: white; /* White text */
+  font-weight: bold;
+  font-size: 1.3rem;
+  padding: 14px 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+/* Make the grade badge readable on dark background */
+.overall-grade .grade {
+  background-color: white;
+  color: #004d00;
+  border: 1px solid #004d00;
+}
+  
+    
     /* Findings Container */
     .findings-container {
       max-width: 1000px;
