--- a/findings/2025.html
+++ b/findings/2025.html
@@ -64,26 +64,13 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+    
+    .overall-grade .grade {
+  background-color: transparent;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  }
 
- /* Style for Overall Grade bar */
-.overall-grade {
-  background-color: #004d00; /* dark green background */
-  color: white; /* white text for both labels and grade */
-  padding: 12px 20px;
-  font-size: 1.2rem;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 10px;
-}
-
-/* Make the grade letter white as well */
-.overall-grade .grade {
-  background: white; /* optional – if you want a white box */
-  color: #004d00; /* dark green text inside the box */
-  border: 1px solid white;
-}
 
     /* Findings Container */
     .findings-container {
